# oanda-v20-openapi

./: .gitignore  .openapi-generator-ignore  Cargo.toml  README.md  gen.sh  v20-openapi.yaml
docs/: Account.md  AccountApi.md  AccountChanges.md  AccountChangesResponse.md  AccountChangesState.md  AccountConfigurationBadRequestResponse.md  AccountConfigurationForbiddenResponse.md  AccountConfigurationRequest.md  AccountConfigurationResponse.md  AccountCurrency.md  AccountGuaranteedStopLossOrderMode.md  AccountInstrumentsResponse.md  AccountProperties.md  AccountResponse.md  AccountState.md  AccountSummary.md  AccountSummaryResponse.md  AccountsResponse.md  CalculatedPositionState.md  CalculatedTradeState.md  CancelOrder404Response.md  CancelOrderResponse.md  CandlesResponse.md  Candlestick.md  CandlestickData.md  CandlestickGranularity.md  ClientConfigure.md  ClientConfigureRejectTransaction.md  ClientConfigureTransaction.md  ClientExtensions.md  ClientPrice.md  ClosePositionBadRequestResponse.md  ClosePositionNotFoundResponse.md  ClosePositionRequest.md  ClosePositionResponse.md  CloseTradeBadRequestResponse.md  CloseTradeNotFoundResponse.md  CloseTradeRequest.md  CloseTradeResponse.md  CreateOrderBadRequestResponse.md  (+119 more)
src/apis/: account_api.rs  configuration.rs  instrument_api.rs  order_api.rs  position_api.rs  pricing_api.rs  trade_api.rs  transaction_api.rs
src/models/: account.rs  account_changes.rs  account_changes_response.rs  account_changes_state.rs  account_configuration_bad_request_response.rs  account_configuration_request.rs  (+146 more)
tests/: account_api.rs
